# SwedishChainsaw

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  distortion.jucer
Source/: FMVDesign.cpp  FMVDesign.h  HM2Filter.cpp  HM2Filter.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  Waveshaper.cpp  Waveshaper.h
